add metadata, loading nprogress

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -58,3 +58,8 @@
   stroke-dashoffset: -134;
   stroke-width: 6;
 }
+
+#nprogress .bar {
+  background: #ff0000 !important;
+  height: 3px !important;
+}
